Opened 13 years ago

Closed 7 years ago

Last modified 4 weeks ago

#5289 closed bug (fixed)

[Expander] wrong layout of controls

Reported by: diver Owned by: yourpalal
Priority: normal Milestone: R1
Component: Applications/Expander Version: R1/Development
Keywords: gci2011 Cc:
Blocked By: Blocking: #6228
Platform: All

Description


Tested with hrev35141.

Attachments (2)

Expander.png (47.9 KB ) - added by diver 13 years ago.
0001-Expander-fix-status-view.patch (6.0 KB ) - added by KapiX 7 years ago.
This patch removes the workaround and fixes the issue.

Download all attachments as: .zip

Change History (35)

comment:1 by anevilyak, 13 years ago

Maybe I'm blind, but I don't see the difference between the two screenshots. Also this sounds like a duplicate of #5283.

comment:2 by diver, 13 years ago

Look at the right border.

by diver, 13 years ago

Attachment: Expander.png added

comment:3 by anevilyak, 13 years ago

Ah. Too early in the morning :)

comment:4 by julun, 13 years ago

Hi, I didn't see the issue in the latest build. Please add some steps on how to reproduce.

comment:5 by diver, 13 years ago

Try to open large archive with many files. It seems that Expander relayout itself once again after it finishes building content listing and everything looks just fine. But while it still builds that listing UI controls are out of place. So with small archive you will not see this problem.

comment:6 by stpere, 13 years ago

Owner: changed from korli to stpere
Status: newin-progress

comment:7 by diver, 13 years ago

Version: R1/alpha1R1/Development

comment:8 by julun, 13 years ago

Hi, is the task still valid? If I remember correctly stpere fixed it some weeks ago. Could you please verify.

comment:9 by diver, 13 years ago

Yes it is still valid. layout of Expander is pretty much broken now.

comment:10 by axeld, 13 years ago

Blocking: 6228 added

(In #6228) Please always add the duplicate info to the "Blocked By" field.

comment:11 by diver, 13 years ago

Still with us in hrev38300.

comment:12 by pulkomandy, 13 years ago

Owner: changed from stpere to yourpalal
Status: in-progressassigned

This is a layout bug, reassigning to yourpalal as he knows best :)

comment:13 by yourpalal, 13 years ago

Thanks pulkomandy, I'll look into this soon :)

comment:14 by diver, 13 years ago

Tracker settings window and ScreenShot app look odd now.

comment:15 by diver, 13 years ago

Also something wrong with Icon-o-Matic.

comment:16 by diver, 13 years ago

Ouch, sorry, wrong bug. Should have posted it in in #5614 :-\

comment:17 by diver, 13 years ago

Yourpalal, any news?

in reply to:  17 comment:18 by yourpalal, 13 years ago

Replying to diver:

Yourpalal, any news?

Not really right now.. I'm busy with school and GCI, and my current Haiku work is focusing on the Media preflet (I'm just about done with it though).

comment:19 by yourpalal, 12 years ago

Status: assignedin-progress

comment:20 by yourpalal, 12 years ago

Status: in-progressassigned

I'm taking this out of 'in-progress', since I'm not actually working on it right now. I still intend to get to it, but I don't want to stop anyone from working on it.

comment:21 by Bth8, 12 years ago

Doesn't seem to be valid any longer

comment:22 by humdinger, 12 years ago

It's still valid. It depends on how long the contained paths/filenames are. When the list is done, the window is resized to the longest line. To see the effect, you'll have to test with an archive with many, many files in it. Also, make the window quite narrow.
IMO, Expander should just keep the window width as it is before showing the contents and keep the horizontal scrollbar.

Last edited 12 years ago by humdinger (previous) (diff)

comment:23 by Bth8, 12 years ago

Ah, yeah, I see it now. It's present while the list is populating and while shrinking the window horizontally.

comment:24 by umccullough, 12 years ago

Keywords: gci2011 added

comment:25 by ctbeiser, 11 years ago

Still present in hrev 43475.

comment:26 by siarzhuk, 10 years ago

Should workaround in hrev45000 be counted as solution for this ticket?

by KapiX, 7 years ago

This patch removes the workaround and fixes the issue.

comment:27 by KapiX, 7 years ago

patch: 01

comment:28 by pulkomandy, 7 years ago

Resolution: fixed
Status: assignedclosed

Applied in hrev50499. Thanks!

comment:29 by mathew23, 9 months ago

Last edited 9 months ago by diver (previous) (diff)

comment:30 by davidmarker, 7 months ago

spam deleted

Last edited 7 months ago by humdinger (previous) (diff)

comment:31 by lilycollins, 4 months ago

Last edited 4 months ago by waddlesplash (previous) (diff)

comment:32 by emmausa, 8 weeks ago

Spam deleted

Last edited 8 weeks ago by humdinger (previous) (diff)

comment:33 by zetisonu, 4 weeks ago

Last edited 4 weeks ago by pulkomandy (previous) (diff)
Note: See TracTickets for help on using tickets.