Expander: fix status view.

* Truncate() would cut Unicode characters in the middle.
* This commit removes arbitrary message length limit as well as workaround
  it was needed for and fixes #5289.
* Status view now expands to maximum possible width and cuts the status
  message if necessary using TruncateString().

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

* Minor whitespace fix.